--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 		<header class="header">
 			<div class="logo">
 			
-			<h1><img src="images/logo.png"> GeenInspiratie</h1>
+			<h1><img src="/images/logo.png"> GeenInspiratie</h1>
 			<a href="#" class="nav-menu-btn_2">Menu</a>
 			</div>
 
@@ -153,12 +153,8 @@
 	<div id="wrapper">
 		<%= yield %>
 	</div>
-
-	<div id="footer">
-		<div id="more_btn_container">
-			<button>More</button>
 			<div id="copyright">©Inspiratieplanet en <a href="http://www.gotogrow.nl" title="">Gotogrow</a> <br/> Powered by <a href="http://www.nhl.nl" title="">NHL</a></div>
-		</div>
+		</div> <!--footer -->
 
 	</div>
 
