--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -116,7 +116,17 @@ header a:active{
 }
 
 
+.logo a{
+	padding-top: 0;
+	border-bottom: 0;
+	margin-right: 0;
+	margin-top: 0;
+}
 
+.logo a:hover{
+	color: #0a6f7b; 
+	border-bottom: 0;
+}
 
 header img{
 	height: 30px; 
