--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,21 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :autofocus => true, :placeholder => "Titel" %>
   </div>
+
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content, :cols => 70, :rows => 10, :placeholder => "Inhoud" %>
   </div>
+
   <div class="field">
     <%= f.file_field :picture %>
   </div>
+
   <div class="field">
-    <%= f.label :tags %><br />
-    <%= f.text_field :tags %>
+    <%= f.text_field :tags, :placeholder => "Tags" %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "verstuur" %>
   </div>
+
 <% end %>
