Add reviews to home and other pages
Reviews are now shown in the popup window and possebilities have been
pushed to allow printing the username of eacht article. code has been
inspected for savety. no e-mail adresses, passwords and sensitive data
are send in the streams that were created in this commit.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -39,7 +39,7 @@
 				</div>
 
 				<div id="reaties_container">
-					<ul>
+					<ul id="reactiesblock">
 						<li>
 							<input class="comments_input_titel" type="text" placeholder="naam">
 							<textarea class="comments_input" placeholder="reactie"></textarea>
