Created that the articles are stored in categories
generated a scaffold category, and created the show page where the
articles are shown in a particular category.

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,6 +26,10 @@
     <%= f.label :tags %><br />
     <%= f.text_field :tags %>
   </div>
+  <div class="field">
+    <%= f.label :categorien %><br />
+    <%= collection_select :article, :category_id, @categories, :id, :title %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
