Created the privacy page which can be updated
Created the privacy page which can be updated when the user has admin
rights.

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -6,6 +6,6 @@
 
 <%# if @usersign %>
 
-<%= link_to "Aanpassen", pages_wijzigen_path(@privacy) %>
+<%= link_to "Aanpassen", wijzigen_page_path(@privacy) %>
 
 <%# end %>
