Adds favorites counter in DB
Adds a favorites_count to db. in a migration the columns of existing
articles are automaticly  populated with the number of favorites linked
to the article.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -60,6 +60,7 @@
 		<% elsif user_signed_in? %>
 			<div class='favoritebutton' id='<%= @article.id %>'></div>
 		<% end %>
+		favorited by <%= @article.favorites_count %> people
 	</div>
 	<% if user_signed_in? && current_user.admin? && @article.accepted %>
 			<%= link_to "Afkeuren", reject_article_path(@article), method: :put %>
