--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
   <title><%= render_title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+
   <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" />
 </head>
 <body onload="setupCollums();">
 <!-- Header responsife gemaakt-->
@@ -163,6 +164,7 @@
 			<div id="copyright">©Inspiratieplanet en <a href="http://www.gotogrow.nl" title="">Gotogrow</a> <br/> Powered by <a href="http://www.nhl.nl" title="">NHL</a></div>
 		</div> <!--footer -->
 
+	
 	</div>
 
 </body>
