--- a/app/views/dashboard/user.html.erb
+++ b/app/views/dashboard/user.html.erb
@@ -25,16 +25,21 @@
 		</div>
 	</div>
 
+	<script type="text/javascript">
+		window.onload=function(UsersetupCollums){};
+
+	</script>
 <!--Articles============================================================!-->
-
-	<% userarticlenumber = 0 %>
+<div id="res_wrapper">
+<% userarticlenumber = 0 %>
 	<% @articleslimit.each do |article| %>
-	<div class="article_wrapper">
-		<div class="article_container">
-			<img class="article_tile" src="<%= article.picture_url(:thumb)  %>" alt="images">
-
+	<div class="artikel_wrapper">
+		<div class="artikel_container">
 				<div class="kop_k">
 					<h3><%= article.title %></h3>
+				</div>
+					
+					<img class="artikel_tegel" src="<%= article.picture_url(:thumb)  %>" alt="images">
 					
 					<div class="text_wrapper">
 					<%= truncate(article.content, :length => 270, :separator => ' ') %>
@@ -42,20 +47,26 @@
 
 					<button class="article-index-button" id="<%= userarticlenumber %>">Bekijken <div></div> </button>
 					
-					<%= article.created_at %>
+					
 					<%= link_to 'Show', article %>
 					<%= link_to 'Edit', edit_article_path(article) %>
 					<%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
 					
-					<a href="#" id="link">Show/Hide</a>
-					<div id="mydiv">Some content</div>
-				</div>
 		</div>
+	</div>
 
 
 	<% end %>
+</div>
 
-	<div class='user-articles-morebutton'>show more?</div>
+
+	 <button class='user-articles-morebutton'>show more?</button>
 	<div class="user-articles-morecontent"></div>
 
 </div>
+
+
+
+	
+
+
