routes to articles and header links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,9 +123,9 @@
 <div id="vinden_wrapper">
 	<div id="vinden_container">
 		<div id="vinden_container_2">		
-			<button id="categorieen_btn">Alle categorieen</button>
-			<button id="n_artikelen_btn">Nieuwe artikelen</button>
-			<button id="top_btn">Top artikelen</button>
+			<button id="categorieen_btn" onClick="location.href='/categories/'">Alle categorieen</button>
+			<button id="n_artikelen_btn" onClick="location.href='/articles/'">Nieuwe artikelen</button>
+			<button id="top_btn" onClick="location.href='/trending/'">Top artikelen</button>
 			<input type="text" placeholder="zoeken" id="zoek_functie">
 		</div>
 	</div>
